@@ -4,6 +4,7 @@ matchbox-window-manager-2 (0.2.14-1~unreleased) unstable; urgency=low
   * Depend on libclutter-0.8-dev > 0.8.2-0maemo13 because of new API for
     shaped windows.
   * Patch from Laszlo to focus next client when unfocusing. Fixes: NB#93431
+  * Fix menu positioning. Fixes: NB#92248
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 12 Jan 2009 17:46:43 +0200
 
